--- a/.github/workflows/stylua.yml
+++ b/.github/workflows/stylua.yml
@@ -7,9 +7,11 @@ on:
 jobs:
   stylua:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Run StyLua
-        uses: JohnnyMorganz/stylua-action@1.0.0
+      - uses: actions/checkout@v2
+      - uses: JohnnyMorganz/stylua-action@1.0.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # CLI arguments
+          args: --check .
+          # Specify `version` to pin a specific version, otherwise action will always use latest version/automatically update
